Fixed wrong color.

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -68,6 +68,6 @@ article.post li {
 article.post li:before {
     content: '√ ';
     font-size: .75rem;
-    color: #ff6803;
+    color: #ff6600;
     margin-right: .5em;
 }
