--- a/_sass/challanges.scss
+++ b/_sass/challanges.scss
@@ -14,7 +14,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: #ff6803;
+    background-color: #ff6600;
 
     -webkit-transition: 0.2s ease;
     transition: 0.2s ease;
