--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -2,7 +2,7 @@
     min-height: 250px;
     margin-top: 90px;
     padding: 30px 0;
-    background-color: #ff6803;
+    background-color: #ff6600;
     overflow: hidden;
 }
 #site-footer p {
