--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -48,7 +48,7 @@ h2, p.description {
     text-align: center;
 }
 a, a:visited {
-    color: #ff6803;
+    color: #ff6600;
     text-decoration: none;
 }
 a:hover, a:focus, a:active {
