--- a/_sass/main-menu.scss
+++ b/_sass/main-menu.scss
@@ -66,7 +66,7 @@
     line-height: 3em;
     vertical-align: middle;
     font-size: 0.85rem;
-    color: #ff6803;
+    color: #ff6600;
     opacity: 0.75;
     border-bottom: 1px solid #eaeaea;
 }
